--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 server.port = 9090
 spring.datasource.username = root
 spring.datasource.password = root
-spring.datasource.url = jdbc:mysql://localhost:3036/custom_plans
+spring.datasource.url = jdbc:mysql://localhost:3306/custom_plans?useSSL=false
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+plan-api.messages.planSaveSucc = Plan Saved Successfully
+plan-api.messages.planSaveFail = Failed to Save the Plan
+plan-api.messages.planUpdateSucc = Plan Updated Successfully
+plan-api.messages.planUpdateFail = Failed to Update the Plan
+plan-api.messages.planDeletedSucc = Plan Deleted Successfully
+plan-api.messages.planDeleteFailed = Failed to Delete the Plan
+plan-api.messages.planStatusChangeSucc = Plan Status Changed Sccesfully
+plan-api.messages.planStatusChangeFail = Failed to Change the Plan Status
